<?xml version="1.0"?>
<package format="2">
  <name>traj_opt</name>
  <version>0.0.0</version>
  <description>The traj_opt package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dwl@todo.todo">dwl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>decomp_ros_utils</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>dyn_astar</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>vis_utils</build_depend>
  <build_depend>jps3d</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>decomp_ros_utils</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>dyn_astar</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>vis_utils</exec_depend>
  <exec_depend>jps3d</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>